softmmu_ss.add(when: 'CONFIG_PL181', if_true: files('pl181.c'))
softmmu_ss.add(when: 'CONFIG_SD', if_true: files('sd.c', 'core.c', 'sdmmc-internal.c'))
softmmu_ss.add(when: 'CONFIG_SDHCI', if_true: files('sdhci.c'))
softmmu_ss.add(when: 'CONFIG_SDHCI_PCI', if_true: files('sdhci-pci.c'))
softmmu_ss.add(when: 'CONFIG_SSI_SD', if_true: files('ssi-sd.c'))

specific_ss.add(when: 'CONFIG_MILKYMIST', if_true: files('milkymist-memcard.c'))
specific_ss.add(when: 'CONFIG_OMAP', if_true: files('omap_mmc.c'))
specific_ss.add(when: 'CONFIG_PXA2XX', if_true: files('pxa2xx_mmci.c'))
specific_ss.add(when: 'CONFIG_RASPI', if_true: files('bcm2835_sdhost.c'))
