keymaps = [
  'ar',
  'bepo',
  'cz',
  'da',
  'de',
  'de-ch',
  'en-gb',
  'en-us',
  'es',
  'et',
  'fi',
  'fo',
  'fr',
  'fr-be',
  'fr-ca',
  'fr-ch',
  'hr',
  'hu',
  'is',
  'it',
  'ja',
  'lt',
  'lv',
  'mk',
  'nl',
  'no',
  'pl',
  'pt',
  'pt-br',
  'ru',
  'sl',
  'sv',
  'th',
  'tr',
]

install_data(keymaps, install_dir: config_host['qemu_datadir'] / 'keymaps')
