test_qapi_outputs_extra = [
  'test-qapi-commands-sub-module.c',
  'test-qapi-commands-sub-module.h',
  'test-qapi-events-sub-module.c',
  'test-qapi-events-sub-module.h',
  'test-qapi-types-sub-module.c',
  'test-qapi-types-sub-module.h',
  'test-qapi-visit-sub-module.c',
  'test-qapi-visit-sub-module.h',
]

test_qapi_outputs_extra = custom_target('dummy', output: test_qapi_outputs_extra, command: 'true')
